--- a/Warehouse/src/main/resources/templates/Login.html
+++ b/Warehouse/src/main/resources/templates/Login.html
@@ -1,108 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <!-- Meta, title, CSS, favicons, etc. -->
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>CellphoneZ</title>
+<head>
+  <meta charset="UTF-8">
+  <title>Login</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css    ">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <style>
+    p.item {
+      padding: 16px;
+      text-align: center;
+      border-radius: 8px;
+      color: white;
+      background-color: green;
+    }
+    #flash-alert {
+      position: fixed;
+      top: 5%;
+      left: 90%;
+      transform: translate(-50%, -50%);
+    }
+  </style>
+</head>
 
-    
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome -->
-    <link th:href="@{/vendors/font-awesome/css/font-awesome.min.css}" rel="stylesheet">
-    <!-- NProgress -->
-    <link th:href="@{/vendors/nprogress/nprogress.css}" rel="stylesheet">
-    <!-- Animate.css -->
-    <link th:href="@{/vendors/animate.css/animate.min.css}" rel="stylesheet">
-    
-    <script th:src="@{/vendors/jquery/dist/jquery.min.js}"></script>
+<body class="bg-secondary">
 
-    <!-- Custom Theme Style -->
-    <link th:href="@{/stylesheets/custom.min.css}" rel="stylesheet">
+  <h3 class="text-center my-5 text-light">User Login</h3>
 
-    
-  </head>
-
-  <body class="login">
-    <div>
-      <a class="hiddenanchor" id="signup"></a>
-      <a class="hiddenanchor" id="signin"></a>
-
-      <div class="login_wrapper">
-        <div class="animate form login_form">
-          <section class="login_content">
-            <form th:action="@{/login}" method="post">
-              <h1>Login Form</h1>
-              <div>
-                <input type="email" name="email" class="form-control" placeholder="Email" required=""/>
-              </div>
-              <div>
-                <input type="password" name="password" class="form-control" placeholder="Password" required=""/>
-              </div>
-              <div>
-              <div class="text-danger ml-3" th:text="${errorMessage}"></div>
-              </div>
-              <div>
-                <button class="btn btn-default submit" type="submit">Log in</button>
+  <!-- buộc toàn bộ dòng và cột phải bỏ trong class container -->
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-10 col-lg-8 col-xl-5">
+        <div class="border p-3 rounded bg-light">
+          <form th:action="@{/login}" method="post">
+            <div class="form-group">
+              <label for="user">Email</label>
+              <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                  <span class="input-group-text">
+                    <i class="fas fa-user"></i>
+                  </span>
+                </div>
+                <input type="email" name="email" class="form-control" value="admin@gmail.com" placeholder="Email" required="">
               </div>
 
-              <div class="clearfix"></div>
-
-              <div class="separator">
-                <p class="change_link">Forgot your account?
-                  <a href="#signup" class="to_register"> find it! </a>
-                </p>
-
-                <div class="clearfix"></div>
-                <br />
-
-                <div>
-                  <h1><i class="fa fa-mobile"></i> CellphoneZ</h1>
-                  <p>©2023 All Rights Reserved. This template was created by CellphoneZ and was for styding use only. Commercial use is prohibited.</p>
+            </div>
+            <div class="form-group">
+              <label for="pass">Password</label>
+              <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                  <span class="input-group-text">
+                    <i class="fas fa-lock"></i>
+                  </span>
+                </div>
+                <input type="password" name="password" class="form-control" value="123456" placeholder="Password" required="">
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input" id="customCheck" name="example1">
+                <label class="custom-control-label" for="customCheck">Remember</label>
+              </div>
+            </div>
+            
+              <div th:if="${errorMessage}" class="form-group">
+                <div class="alert alert-danger alert-dismissible fade show">
+                  <button type="button" class="close" data-dismiss="alert">&times;</button>
+                  <p class="text-danger ml-3" th:text="${errorMessage}"></p>
                 </div>
               </div>
-            </form>
-          </section>
-        </div>
-
-        <div id="register" class="animate form registration_form">
-          <section class="login_content">
-            <form action="/login/identify" method="post">
-              <h1>Find Your Account</h1>
-              <div>
-                <input type="email" name="mail" class="form-control" placeholder="Email" required="" />
-              </div>
-              <div>
-                <button class="btn btn-default submit" href="index.html">Search</button>
-              </div>
-
-              <div class="clearfix"></div>
-
-              <div class="separator">
-                <p class="change_link">Remember it?
-                  <a href="#signin" class="to_register"> Log in </a>
-                </p>
-
-                <div class="clearfix"></div>
-                <br />
-
-                <div>
-                  <h1><i class="fa fa-mobile"></i> CellphoneZ</h1>
-                  <p>©2023 All Rights Reserved. This template was created by Gen and was for styding use only. Commercial use is prohibited.</p>
-                </div>
-              </div>
-            </form>
-          </section>
+            
+            <div class="form-group">
+              <button class="btn btn-success px-5" type="submit">Login</button>
+            </div>
+            <div class="form-group">
+              <p>Don't have any account? <a href="/register">Register now!</a></p>
+            </div>
+          </form>
         </div>
       </div>
     </div>
-    <div id="loginFailAlertForLogin" class="alert alert-danger" style="display:none; position: fixed; top: 50%; right: 0; width: 40%;">
-      <strong>Fail!</strong> Username or password are not correct.
-    </div>
-  </body>
-</html>
+  </div>
+</body>
 
+</html>
