--- a/Warehouse/src/main/resources/templates/temp.html
+++ b/Warehouse/src/main/resources/templates/temp.html
@@ -2,10 +2,22 @@
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorate = "~{mainlayout}">
 <head>
-    
+    <!-- Bootstrap -->
+	<link th:href="@{/vendors/bootstrap/dist/css/bootstrap.min.css}" rel="stylesheet">
+	<!-- Font Awesome -->
+	<link th:href="@{/vendors/font-awesome/css/font-awesome.min.css}" rel="stylesheet">
+	<!-- NProgress -->
+	<link th:href="@{/vendors/nprogress/nprogress.css}" rel="stylesheet">
+	<!-- bootstrap-progressbar -->
+	<link th:href="@{/vendors/bootstrap-progressbar/css/bootstrap-progressbar-3.3.4.min.css}" rel="stylesheet">
+	<!-- bootstrap-daterangepicker -->
+	<link th:href="@{/vendors/bootstrap-daterangepicker/daterangepicker.css}" rel="stylesheet">
+<!-- Custom Theme Style -->
+  <link th:href="@{/stylesheets/custom.css}" rel="stylesheet">
 </head>
 <body>
     <div layout:fragment="content" >
+    	ac
     	
 	</div>
 </body>
