--- a/Warehouse/src/main/resources/templates/home.html
+++ b/Warehouse/src/main/resources/templates/home.html
@@ -2,7 +2,18 @@
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorate = "~{mainlayout}">
 <head>
-    
+    <!-- Bootstrap -->
+	<link th:href="@{/vendors/bootstrap/dist/css/bootstrap.min.css}" rel="stylesheet">
+	<!-- Font Awesome -->
+	<link th:href="@{/vendors/font-awesome/css/font-awesome.min.css}" rel="stylesheet">
+	<!-- NProgress -->
+	<link th:href="@{/vendors/nprogress/nprogress.css}" rel="stylesheet">
+	<!-- bootstrap-progressbar -->
+	<link th:href="@{/vendors/bootstrap-progressbar/css/bootstrap-progressbar-3.3.4.min.css}" rel="stylesheet">
+	<!-- bootstrap-daterangepicker -->
+	<link th:href="@{/vendors/bootstrap-daterangepicker/daterangepicker.css}" rel="stylesheet">
+<!-- Custom Theme Style -->
+  <link th:href="@{/stylesheets/custom.css}" rel="stylesheet">
 </head>
 <body>
     <div layout:fragment="content" >
@@ -55,8 +66,45 @@
     </div>
   </div>
 </div>
+<!-- jQuery -->
+            <script src="vendors/jquery/dist/jquery.min.js"></script>
+            <!-- Bootstrap -->
+            <script src="vendors/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+            <!-- FastClick -->
+            <script src="vendors/fastclick/lib/fastclick.js"></script>
+            <!-- NProgress -->
+            <script src="vendors/nprogress/nprogress.js"></script>
+            <!-- Chart.js -->
+            <script src="vendors/Chart.js/dist/Chart.min.js"></script>
+            <!-- jQuery Sparklines -->
+            <script src="vendors/jquery-sparkline/dist/jquery.sparkline.min.js"></script>
+            <!-- morris.js -->
+            <script src="vendors/raphael/raphael.min.js"></script>
+            <script src="vendors/morris.js/morris.min.js"></script>
+            <!-- gauge.js -->
+            <script src="vendors/gauge.js/dist/gauge.min.js"></script>
+            <!-- bootstrap-progressbar -->
+            <script src="vendors/bootstrap-progressbar/bootstrap-progressbar.min.js"></script>
+            <!-- Skycons -->
+            <script src="vendors/skycons/skycons.js"></script>
+            <!-- Flot -->
+            <script src="vendors/Flot/jquery.flot.js"></script>
+            <script src="vendors/Flot/jquery.flot.pie.js"></script>
+            <script src="vendors/Flot/jquery.flot.time.js"></script>
+            <script src="vendors/Flot/jquery.flot.stack.js"></script>
+            <script src="vendors/Flot/jquery.flot.resize.js"></script>
+            <!-- Flot plugins -->
+            <script src="vendors/flot.orderbars/js/jquery.flot.orderBars.js"></script>
+            <script src="vendors/flot-spline/js/jquery.flot.spline.min.js"></script>
+            <script src="vendors/flot.curvedlines/curvedLines.js"></script>
+            <!-- DateJS -->
+            <script src="vendors/DateJS/build/date.js"></script>
+            <!-- bootstrap-daterangepicker -->
+            <script src="vendors/moment/min/moment.min.js"></script>
+            <script src="vendors/bootstrap-daterangepicker/daterangepicker.js"></script>
 <!-- /page content -->
 	</div>
+
 </body>
 </html>
 
