--- a/Warehouse/src/main/resources/templates/mainlayout.html
+++ b/Warehouse/src/main/resources/templates/mainlayout.html
@@ -33,7 +33,7 @@
                   <li><a><i class="fa fa-laptop"></i> Products <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a href="/product">View all products</a></li>
-                      <li><a href="/create_product">Create a product</a></li>
+                      <li><a href="/add_product">Create a product</a></li>
                     </ul>
                   </li>
                   <li><a><i class="fa fa-home"></i> Warehouse <span class="fa fa-chevron-down"></span></a>
