--- a/Warehouse/src/main/resources/templates/productDetails.html
+++ b/Warehouse/src/main/resources/templates/productDetails.html
@@ -31,8 +31,8 @@
         }
 
         #img {
-            max-width: 100%;
-            height: auto;
+            max-width: 50%;
+            max-height: 400px;
             border-radius: 8px;
             margin-bottom: 20px;
         }
